--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,10 @@ JWT_REFRESH_EXPIRATION_DAYS=30
 JWT_RESET_PASSWORD_EXPIRATION_MINUTES=10
 # Number of minutes after which a verify email token expires
 JWT_VERIFY_EMAIL_EXPIRATION_MINUTES=10
+#redis url
+REDIS_URL=
+REDIS_HOST=
+REDIS_PORT=
+REDIS_USER=
+REDIS_PASSWORD=
+REDIS_CACHE_LIFETIME=120
