--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.js",
-    "server": "node src/index.js"
+    "server": "node swagger && node src/index.js"
   },
   "keywords": [],
   "author": "",
